# Parquet-cpp

./: .gitignore  CMakeLists.txt
cmake_modules/: FindGTest.cmake
example/: decode-benchmark.cc  example_util.cc  parquet-record-reader.cc
src/: generic-record.cc  parquet.cc  schema.cc  util.cc
src/encodings/: bool-encoding.h  delta-bit-pack-encoding.h  delta-byte-array-encoding.h  delta-length-byte-array-encoding.h  dictionary-encoding.h  encodings.h  plain-encoding.h
src/impala/: bit-util.h
src/parquet/: generic-record.h  parquet.h  schema.h
tests/: CMakeLists.txt  bit-util-test.cc  encoding-test.cc  rle-test.cc
